cheat-engine/www/cheat/css/main.css
/* hide body scrollbar */
body::-webkit-scrollbar {
  display: none;
}

.hide-scrollbar::-webkit-scrollbar {
  width: 0 !important;
  height: 0 !important;
  display: none;
}

.hide-scrollbar {
  overflow: auto;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.opaque-on-mouseover {
  transition: opacity 0.3s;
  opacity: 0.3;
}

.opaque-on-mouseover:hover {
  transition: opacity 0.3s;
  opacity: 1;
}

.x-small-field .v-input__control {
  height: 24px !important;
  min-height: 24px !important;
}

/* z-index */
.z-index-cheat-0 {
  z-index: 1001 !important;
}

.z-index-cheat-1 {
  z-index: 1010 !important;
}

.z-index-cheat-2 {
  z-index: 1020 !important;
}

.z-index-cheat-3 {
  z-index: 1030 !important;
}

.z-index-cheat-4 {
  z-index: 1040 !important;
}

/* css for vuetify components */
.v-dialog__content--active {
  z-index: 1003 !important;
}

.v-overlay--active {
  z-index: 1002 !important;
}

.v-snack__wrapper {
  z-index: 1011 !important;
}

/*.x-small-field .v-input__control {*/
/*    height: 35px;*/
/*    width: 1px;*/
/*    margin: 0;*/
/*}*/
/*.x-small-field .v-input__slot {*/
/*    min-height: 12px !important;*/
/*}*/
/*.x-small-field .v-label,*/
/*.x-small-field .v-select__selections,*/
/*.x-small-field .v-list-item__title {*/
/*    font-size: 12px;*/
/*}*/
/*.x-small-field .v-input__prepend-inner {*/
/*    top: 1px !important;*/
/*    margin-top: 8px !important;*/
/*    text-align: center !important;*/
/*    align-content: center !important;*/
/*}*/
/*.x-small-field .v-text-field__slot .v-label {*/
/*    top: 6px;*/
/*}*/
/*.x-small-field .v-text-field__slot .v-label--active {*/
/*    top: 16px;*/
/*}*/

